design updated by ayoub